<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".CreateContact"
    >

    <TextView
        android:id="@+id/tv_new_contact"
        style="@style/Title"
        android:layout_width="349dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/NEW_CONTACT"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_picture_new"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:src="@drawable/person"
        app:shapeAppearanceOverlay="@style/roundedImage"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:textColorHint="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:hint="@string/First_Name"
        android:layout_marginTop="16dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_first_name"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/background"
            android:textColor="@color/button"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:textColorHint="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:hint="@string/Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/background"
            android:textColor="@color/button"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:textColorHint="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:hint="@string/Phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/background"
            android:textColor="@color/button"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:textColorHint="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:hint="@string/Address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_address"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/background"
            android:textColor="@color/button"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:hint="@string/Other_Information"
        android:orientation="vertical"
        android:textColorHint="@color/text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_other_information"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/background"
            android:textColor="@color/button" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_create"
        android:fontFamily="@font/the_font"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/button"
        android:textSize="15sp"
        android:text="@string/Create"
        android:layout_gravity="center"
        app:rippleColor="@color/background"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"

        />

</LinearLayout>