<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ModifyContact">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Title"
        android:text="MODIFY"
        android:textAlignment="center"
        android:layout_marginTop="24dp"
       ></TextView>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_picture_mod"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:src="@drawable/person"
        app:shapeAppearanceOverlay="@style/roundedImage"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_first_name"
        style="?attr/textInputFilledStyle"
        android:textColorHint="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:hint="@string/First_Name"
        android:layout_marginTop="50dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_first_name_modify"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/background"
            android:textColor="@color/button"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="?attr/textInputFilledStyle"
        android:textColorHint="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:hint="@string/Name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_name_modify"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/background"
            android:textColor="@color/button"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_phone_layout"
        style="?attr/textInputFilledStyle"
        android:textColorHint="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:hint="@string/Phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_phone_modify"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/background"
            android:textColor="@color/button"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_address"
        style="?attr/textInputFilledStyle"
        android:textColorHint="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:hint="@string/Address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_address_modify"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/background"
            android:textColor="@color/button"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_other_info"
        style="?attr/textInputFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:hint="@string/Other_Information"
        android:orientation="vertical"
        android:textColorHint="@color/text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_other_information_modify"
            style="@style/Text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/background"
            android:textColor="@color/button" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_ok_modify"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/the_font"
        android:text="@string/ok"
        app:rippleColor="@color/background" />

</LinearLayout>